<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.example.account.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/login_progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/tv_header_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_user_login"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/et_email_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email_login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edittext_login"
            android:drawableStart="@drawable/ic_email_grey5_24dp"
            android:drawableLeft="@drawable/ic_email_grey5_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey5"
            android:textSize="16sp"
            android:text="@={viewmodel.email}"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/et_pwd_login"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_login"
            app:layout_constraintRight_toRightOf="@id/gl_right_login"
            app:layout_constraintTop_toBottomOf="@id/tv_header_login"
            tools:ignore="RtlSymmetry"
            android:nextFocusDown="@id/et_pwd_login"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd_login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_login"
            android:drawableStart="@drawable/ic_key_grey5_24dp"
            android:drawableLeft="@drawable/ic_key_grey5_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey5"
            android:textSize="16sp"
            android:text="@={viewmodel.password}"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_login"
            app:layout_constraintRight_toRightOf="@id/gl_right_login"
            app:layout_constraintTop_toBottomOf="@id/et_email_login"
            tools:ignore="RtlSymmetry" />

        <com.dsm.androidcomponent.view.EnableButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_primary_light"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.onClickLogin()}"
            app:enable="@{viewmodel.isLoginEnable()}"
            app:layout_constraintBottom_toTopOf="@id/tv_register_login"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_login"
            app:layout_constraintRight_toRightOf="@id/gl_right_login"
            app:layout_constraintTop_toBottomOf="@id/et_pwd_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/do_register_user"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="12sp"
            android:onClick="@{() -> viewmodel.onClickSignup()}"
            app:layout_constraintBottom_toTopOf="@id/tv_forget_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forget_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_id_or_pwd"
            android:textColor="@color/colorGrey5"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="60dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="60dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>