<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.example.account.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="RtlCompat,RtlSymmetry">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_register2"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            tools:targetApi="lollipop">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_user"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email_register2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_register"
            android:drawableStart="@drawable/ic_email_grey_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@={viewmodel.email}"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_register2"
            app:layout_constraintRight_toRightOf="@id/gl_right_register2"
            app:layout_constraintTop_toBottomOf="@id/tb_register2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/check_conflict"
            android:textColor="@{viewmodel.isEmailVerified ? @color/colorGrey : @color/colorPrimaryLight}"
            android:textSize="16sp"
            android:onClick="@{() -> viewmodel.onClickDuplicationCheck()}"
            app:layout_constraintBottom_toBottomOf="@id/et_email_register2"
            app:layout_constraintEnd_toEndOf="@id/et_email_register2"
            app:layout_constraintTop_toTopOf="@id/et_email_register2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd_register2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_register"
            android:drawableStart="@drawable/ic_key_grey_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@={viewmodel.password}"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_register2"
            app:layout_constraintRight_toRightOf="@id/gl_right_register2"
            app:layout_constraintTop_toBottomOf="@id/et_email_register2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwdCheck_register2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_register"
            android:drawableStart="@drawable/ic_key_grey_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/password_check"
            android:inputType="textPassword"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@={viewmodel.passwordCheck}"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_register2"
            app:layout_constraintRight_toRightOf="@id/gl_right_register2"
            app:layout_constraintTop_toBottomOf="@id/et_pwd_register2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pwdCheck_register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_check_grey_24dp"
            android:visibility="@{viewmodel.isPasswordChecked ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/et_pwdCheck_register2"
            app:layout_constraintEnd_toEndOf="@id/et_pwdCheck_register2"
            app:layout_constraintTop_toTopOf="@id/et_pwdCheck_register2" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nickname_register2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_register"
            android:drawableStart="@drawable/ic_person_grey_24dp"
            android:drawablePadding="16dp"
            android:hint="@string/nickname"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            android:textColorHint="@color/colorGrey"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@={viewmodel.nickname}"
            app:layout_constraintLeft_toLeftOf="@id/gl_left_register2"
            app:layout_constraintRight_toRightOf="@id/gl_right_register2"
            app:layout_constraintTop_toBottomOf="@id/et_pwdCheck_register2" />

        <com.dsm.androidcomponent.view.EnableButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/bg_button_primary_light"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:enable="@{viewmodel.isSignupEnable}"
            android:onClick="@{() -> viewmodel.onClickSignup()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_right_register2"
            app:layout_constraintStart_toStartOf="@id/gl_left_register2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_left_register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_right_register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>